select overflow fix

--- a/Frontend/src/app/dashboard/dashboard.component.css
+++ b/Frontend/src/app/dashboard/dashboard.component.css
@@ -326,6 +326,4 @@
   justify-content: center;
 }
 
-.dep-select{
-  width: 75px!important;text-align: center
-}
+
